# redtape

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pypi_deploy.yml  tagged_release.yml  test.yml
redtape/: __main__.py  admin.py  cli.py  connectors.py  specification.py
redtape/specification/: __init__.py  models.py
tests/: conftest.py  test_admin.py  test_connectors.py  test_specification.py
